# Plagiarism-Checker

./: .gitignore  analysis_history.db  backend.py  frontend.py  main.py  pyproject.toml  serperai.py  streamlit_app.py
detectors/: methods.py  pdf.py  pipeline.py
